--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #files
-#next.config.js
+next.config.js
 
 # dependencies
 node_modules
