--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-facebook-login": "^4.1.1"
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2"
   }
 }
