--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-is": "^17.0.1",
     "styled-components": "^5.2.1"
   },
